@@ -23,6 +23,7 @@ import DisputesPage from 'disputes';
 import DisputeDetailsPage from 'disputes/details';
 import DisputeEvidencePage from 'disputes/evidence';
 import AdditionalMethodsPage from 'wcpay/additional-methods-setup';
+import MultiCurrencySetupPage from 'wcpay/multi-currency-setup';
 import CardReadersPage from 'card-readers';
 import OverviewPage from 'overview';
 import { getTasks } from 'overview/task-list/tasks';
@@ -151,6 +152,15 @@ addFilter(
 			],
 		} );
 		pages.push( {
+			container: MultiCurrencySetupPage,
+			path: '/payments/multi-currency-setup',
+			wpOpenMenu: menuID,
+			breadcrumbs: [
+				rootLink,
+				__( 'Set up multiple currencies', 'woocommerce-payments' ),
+			],
+		} );
+		pages.push( {
 			container: CardReadersPage,
 			path: '/payments/card-readers',
 			wpOpenMenu: menuID,
@@ -193,14 +203,12 @@ addFilter(
 		const {
 			accountStatus,
 			showUpdateDetailsTask,
-			multiCurrencySetup,
 			featureFlags: { accountOverviewTaskList },
 		} = wcpaySettings;
 
 		const wcPayTasks = getTasks( {
 			accountStatus,
 			showUpdateDetailsTask,
-			multiCurrencySetup,
 			isAccountOverviewTasksEnabled: Boolean( accountOverviewTaskList ),
 		} );
 
