@@ -3,6 +3,7 @@
 = 3.5.0 - 2021-xx-xx =
 * Fix - Error when renewing subscriptions with saved payment methods disabled.
 * Add - JS error boundaries to admin screens.
+* Update - Remove task from the overview list for setting up multiple currencies
 
 = 3.4.0 - 2021-12-08 =
 * Add - Allow UI customizations on checkout payment fields.
